--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!--Links to external libraries-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="assets/style.css" />
+    <!--local css-->
+    <link rel="stylesheet" href="assets/css/style.css" />
     <title>Quiz App</title>
 </head>
 
@@ -64,6 +66,7 @@
 
 
     </main>
+    <!--Link to local script file-->
     <script src="./scripts/index.js"></script>
     <script src="https://kit.fontawesome.com/34b9bc8a79.js" crossorigin="anonymous"></script>
 </body>
