js and html code updated

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </section>
         <!--section for question and answers-list-->
         <section class="hidden quizSection" id="quizQuestions">
-            <p id="timer">Time: <span id="time-remaining">0</span></p>
+            <p id="timer">Time: <span id="timeRemaining">0</span></p>
             <h1 id="question">Question</h1>
             <ul id="choices"></ul>
         </section>
@@ -59,7 +59,7 @@
 
         </section>
         <div>
-
+        <!--Dispaly icon for correct or incorrect answer-->   
         <p id="correct" class="choice-status hidden"><i class="fas fa-check-circle" aria-hidden="true"></i>Correct!</p>
         <p id="wrong" class="choice-status hidden"><i class="fas fa-times-circle" aria-hidden="true"></i>Wrong!</p>
       </div>
