--- a/highscores.html
+++ b/highscores.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <script src="https://kit.fontawesome.com/34b9bc8a79.js" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <!--CSS-->
     <link rel="stylesheet" href="assets/css/style.css">
 
@@ -29,11 +30,12 @@
         </tr>
       </table>
       <div id="highscore-buttons">
-        <a href="index.html" class="btn btn-info"><i class="fas fa-angle-left" aria-hidden="true"></i>Go back</a>
-        <button class="btn btn-danger" id="clear-highscores">Clear highscores</button>
+        <!--<a href="index.html" class="btn btn-info"><i class="fas fa-angle-left" aria-hidden="true"></i>Go back</a>-->
+        <button id="clearScores">Clear highscores</button>
       </div>
     </main>
 
-    <script src="./scripts/highscore.js"></script>
+    <script src="./assets/scripts/highscores.js"></script>
+    
   </body>
 </html>
